Update and rename semple.env to .env

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 
 #-------- Required Variables --------#
 
-API_ID=
-API_HASH=
-OWNER_ID=
-SUDO_USERS=6180051867
-CLIENT=
+API_ID=21960982
+API_HASH=f5bc34301dddd0a7bb1d3eb4a12589eb
+OWNER_ID=6180051867
+SUDO_USERS=
+CLIENT=6898256401:AAGL3mofNDrjPQ6kuK6uEo-MbfeZzmcQEys
 
 #-------- All CLIENTs --------#
 
@@ -31,7 +31,7 @@ CLIENT20=
 
 #-------- Extra If You Want --------#
 
-HNDLR=
+HNDLR=!
 ALIVE_PIC=
 ALIVE_MSG=
 PING_MSG=
